@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - add assert_ok method
 
 0.006     2015-11-03 10:29:45-05:00 America/New_York
         - document as_string (thanks, Alexander Karelas!)
